--- a/src/layouts/Paid.css
+++ b/src/layouts/Paid.css
@@ -2,7 +2,7 @@
 	margin: 0;
 	box-sizing: border-box;
 }
-/* .pay-BOX-container {
+.pay-BOX-container {
 	background-color: rgba(0, 0, 0, 0.55);
 	display: flex;
 	justify-content: center;
@@ -13,28 +13,26 @@
 	right: 0;
 	position: fixed;
 	z-index: 9999;
-} */
-
+}
+.pay-Box-heading {
+	margin-bottom: 10px;
+}
 .pay-BOX {
+	padding: 20px 40px;
+	border-radius: 16px;
 	background-color: white;
-	width: 800px;
+	width: 1000px;
 	height: 400px;
 	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
-.pay-Box-heading {
-	height: 50px;
-	border: 1px solid white;
-}
+
 .pay-heading-info {
-	margin: 10px;
 	font-size: 25px;
 	font-weight: 700;
 	color: rgb(244, 177, 33);
-	margin-left: 20px;
 }
 .pay-Box-body {
 	height: 250px;
-	border: 1px solid white;
 }
 .pay-body-left {
 	width: 45%;
@@ -56,16 +54,17 @@
 	width: 20px;
 }
 .pay-voucher {
+	margin-top: 10px;
 	height: 25px;
 	width: 230px;
 	border-radius: 7px;
-	margin-top: 5px;
 }
 .pay-rigth-info-1 {
 	width: 100%;
 	border: 1px solid;
 }
 .pay-body-right {
+	padding: 10px;
 	width: 55%;
 }
 .pay-right-info-4 {
@@ -75,24 +74,23 @@
 	margin-left: 5px;
 }
 .pay-right-info {
-	margin-top: 10px;
 	font-size: 17px;
 	font-weight: 600;
 }
 .pay-Box-bottom {
 	justify-content: end;
 	display: flex;
-	margin-top: 40px;
-	margin-right: 20px;
+	margin-top: 20px;
+	margin-right: 10px;
 }
 .pay-Box-bottom button {
-	font-size: 13px;
+	font-size: 14px;
 	font-weight: 600;
-	border-radius: 5px;
-	background-color: rgb(244, 177, 33);
+	border-radius: 10px;
+	background-color: rgb(248, 168, 89);
 	cursor: pointer;
-	width: 100px;
-	height: 30px;
+	width: 140px;
+	height: 40px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
