--- a/src/layouts/YourBusiness.css
+++ b/src/layouts/YourBusiness.css
@@ -320,6 +320,7 @@
 	align-items: center;
 	gap: 20px;
 	margin-top: -10px;
+	box-shadow: rgba(0, 0, 0, 0.1) 1px 1px 2px;
 }
 
 .unlike-viewer-comment-main-your-business {
