--- a/src/layouts/CreatePost.css
+++ b/src/layouts/CreatePost.css
@@ -32,7 +32,7 @@
 	border-radius: 100%;
 }
 .create-post-heading-1 {
-	margin: 10px;
+	margin: 10px 20px 10px 10px;
 	color: rgb(244, 177, 33);
 	font-weight: 700;
 }
