--- a/src/components/ColorPicker.css
+++ b/src/components/ColorPicker.css
@@ -5,6 +5,6 @@
 .main-color-picker {
 	position: absolute;
 	z-index: 9999;
-	width: 200px;
-	height: 500px;
+	margin-top: 12px;
+	margin-right: 20px;
 }
