--- a/src/components/ColorPicker.css
+++ b/src/components/ColorPicker.css
@@ -5,6 +5,7 @@
 .main-color-picker {
 	position: absolute;
 	z-index: 9999;
-	margin-top: 12px;
+	margin-top: 24px;
 	margin-right: 20px;
+	margin-left: 30px;
 }
