--- a/src/layouts/YourBusiness.css
+++ b/src/layouts/YourBusiness.css
@@ -172,7 +172,6 @@
 .main-your-business-container-item {
 	position: relative;
 	box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-	background-color: rgb(235, 252, 252);
 	gap: 16px;
 	align-items: center;
 	font-size: 0.8em;
@@ -191,10 +190,8 @@
 }
 
 .heading-main-your-business-container {
-	border: 1px solid red;
 	border-radius: 16px;
-	background-color: rgb(120, 290, 232);
-	box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+	box-shadow: rgba(0, 0, 0, 0.5) 0px 1px 4px;
 	display: flex;
 	height: fit-content;
 	align-items: center;
@@ -219,7 +216,6 @@
 
 /* card */
 .card-item-main-your-business {
-	border: 2px solid blue;
 	z-index: 8888;
 	grid-area: card;
 	width: 238px;
@@ -235,6 +231,7 @@
 	display: flex;
 	margin-top: auto;
 	margin-left: auto;
+	cursor: pointer;
 }
 .circles-card-nav-main-your-business {
 	width: 50px;
@@ -245,7 +242,6 @@
 
 .heading-info-card-nav-main-your-business {
 	cursor: pointer;
-
 	display: flex;
 	flex-direction: column;
 	margin-left: 10px;
