--- a/src/layouts/YourBusiness.css
+++ b/src/layouts/YourBusiness.css
@@ -73,7 +73,7 @@
 	height: 100%;
 	position: sticky;
 	left: 0;
-	z-index: 9999;
+	z-index: 7778;
 	grid-area: flag;
 	background-color: white;
 }
@@ -85,7 +85,7 @@
 	background-color: white;
 	position: sticky;
 	left: 20px;
-	z-index: 9998;
+	z-index: 7777;
 	box-shadow: none;
 	grid-area: card;
 	width: 228px;
@@ -247,6 +247,10 @@
 	margin-left: 10px;
 	align-items: flex-start;
 	text-align: left !important;
+	max-width: 140px;
+	max-height: 60px;
+	min-height: 60px;
+	overflow-y: hidden;
 }
 
 /* end  */
@@ -355,7 +359,7 @@
 	justify-content: center;
 	align-items: center;
 	gap: 20px;
-	margin-top: -20px;
+	margin-top: -10px;
 	box-shadow: rgba(0, 0, 0, 0.1) 1px 1px 2px;
 }
 
@@ -398,4 +402,29 @@
 .comment-main-your-business .address-comment-main-your-business {
 	grid-area: address;
 	width: 300px;
+}
+
+/* displayNotification */
+
+.notification-toggle-background {
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	z-index: 9999;
+	display: flex;
+	justify-content: end;
+	overflow-y: auto;
+}
+
+.notification-toggle-container {
+	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+	background-color: white;
+	border-radius: 10px;
+	padding: 0 20px;
+	width: 400px;
+	margin-right: 20px;
+	margin-top: 10px;
+	height: fit-content;
 }
