--- a/src/components/Business/AboutBusiness.css
+++ b/src/components/Business/AboutBusiness.css
@@ -69,7 +69,7 @@
 	margin-right: 10px;
 }
 
-button {
+.btn-like button {
 	background-color: rgb(248, 168, 89);
 	color: white;
 	border: none;
@@ -81,7 +81,25 @@ button {
 	margin-top: 16px;
 }
 
-button:hover {
+.btn-like button:hover {
+	background-color: rgb(55, 55, 55);
+	border: none;
+	color: white;
+}
+
+.btn-nav button {
+	background-color: rgb(248, 168, 89);
+	color: white;
+	border: none;
+	font-size: 1em;
+	font-weight: bold;
+	height: 30px;
+	width: 100px;
+	border-radius: 10px;
+	margin-top: 16px;
+}
+
+.btn-nav button:hover {
 	background-color: rgb(55, 55, 55);
 	border: none;
 	color: white;
