--- a/src/components/Calendar/BasicCalendar.css
+++ b/src/components/Calendar/BasicCalendar.css
@@ -1,15 +1,16 @@
 .react-calendar {
-	width: 400px;
+	width: 360px;
 	max-width: 100%;
 	background-color: #fff;
 	color: #222;
-	border-radius: 8px;
+	border-radius: 10px;
 	box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
 	font-family: Arial, Helvetica, sans-serif;
 	line-height: 1.125em;
 }
 .react-calendar__navigation button {
-	color: #6f48eb;
+	border: none;
+	color: black;
 	min-width: 44px;
 	background: none;
 	font-size: 16px;
