--- a/src/layouts/Calendar/CalendarLayout.css
+++ b/src/layouts/Calendar/CalendarLayout.css
@@ -9,7 +9,7 @@
 /* box1 */
 .box1-calendar {
 	display: grid;
-	grid-template-rows: auto auto 300px auto auto;
+	grid-template-rows: 80px 80px 260px 110px 210px;
 }
 
 .date-calendar {
@@ -225,82 +225,7 @@
 		rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
 
-/* plan-calendar */
-.plan-calendar {
-	background-color: #f6f6f6;
-	border-radius: 20px;
-	margin-top: 20px;
-	box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-	overflow-x: scroll;
-	width: 1000px;
-}
-
-.plan-calendar-container {
-	display: flex;
-	flex-direction: column;
-	justify-content: end;
-	padding: 40px 60px;
-}
-
-.specific-time-plan-calendar {
-	width: 140px;
-	font-size: 1.8rem;
-	margin-bottom: 20px;
-}
-
-/* detail-plan-calendar */
-.detail-plan-calendar {
-	display: flex;
-	gap: 40px;
-}
-
-.detail-plan-calendar-container {
-	margin-top: 20px;
-	display: flex;
-	flex-direction: column;
-	gap: 40px;
-}
-
-.content-detail-plan-calendar {
-	width: 280px;
-	display: flex;
-	flex-direction: column;
-	position: relative;
-}
-
-.tag-detail-plan-calendar {
-	width: 38px;
-	height: 28px;
-	background-color: brown;
-	top: -20px;
-	margin-left: 25px;
-	z-index: 1;
-	left: 0;
-	position: absolute;
-	border-radius: 4px;
-}
-
-.detail-description-plan-calendar {
-	z-index: 2;
-	background: rgba(246, 246, 246, 0);
-	border-radius: 16px;
-	box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
-		rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-	backdrop-filter: blur(4px);
-	-webkit-backdrop-filter: blur(4px);
-	border: 1px solid rgba(246, 246, 246, 0.32);
-	padding: 20px 0 10px 20px;
-	color: brown;
-	display: flex;
-	flex-direction: column;
-	gap: 10px;
-}
-
-.title-detail-plan-calendar {
-	font-size: 1.4rem;
-}
-
-.time-detail-plan-calendar {
-	font-size: 1rem;
-	margin-left: 20px;
+.btn-active-date-calendar {
+	box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+		rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
