--- a/src/layouts/Calendar/DayLayout.css
+++ b/src/layouts/Calendar/DayLayout.css
@@ -3,39 +3,36 @@
 	border-radius: 20px;
 	margin-top: 20px;
 	box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-	overflow-x: scroll;
-	min-width: auto;
 	padding: 40px 60px;
+	height: 800px;
+	display: flex;
+	width: 900px;
+	overflow-x: auto;
 }
 
 .plan-calendar-container {
 	display: flex;
-	flex-direction: column;
-	justify-content: end;
-}
-
-.specific-time-plan-calendar {
-	width: 140px;
-	font-size: 1.8rem;
-	margin-bottom: 20px;
-}
-
-/* detail-plan-calendar */
-.detail-plan-calendar {
-	display: flex;
 	gap: 40px;
 }
 
+/* detail-plan-calendar */
+
 .detail-plan-calendar-container {
+	width: 280px;
 	margin-top: 20px;
 	display: flex;
 	flex-direction: column;
 	gap: 40px;
 }
 
+.specific-time-plan-calendar {
+	font-size: 1.8rem;
+	margin-bottom: 20px;
+}
+
 .content-detail-plan-calendar {
-	width: 280px;
 	display: flex;
+	width: 280px;
 	flex-direction: column;
 	position: relative;
 }
