--- a/src/layouts/Calendar/YearLayout.css
+++ b/src/layouts/Calendar/YearLayout.css
@@ -25,8 +25,8 @@
 	cursor: pointer;
 }
 .btn-year-layout:hover {
-	background-color: black;
-	color: white;
+	box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+		rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
 .calendar-year-detail-layout-container {
 	margin-bottom: 20px;
