--- a/src/layouts/Calendar/WeekLayout.css
+++ b/src/layouts/Calendar/WeekLayout.css
@@ -5,7 +5,7 @@
 	box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 	width: 900px;
 	height: 800px;
-	overflow-y: auto;
+	overflow: auto;
 	margin-bottom: 20px;
 	display: flex;
 	position: relative;
