--- a/src/layouts/Calendar/Kindofplan.css
+++ b/src/layouts/Calendar/Kindofplan.css
@@ -107,3 +107,100 @@
     background-color: white;
     color: black;
 }
+.new-tag-container {
+    height: 300px;
+    width: 500px;
+    border: 1px solid;
+    background-color: white;
+    margin-left: 30px;
+    border-radius: 20px;
+    padding: 20px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border: none;
+}
+.new-tag-tittle {
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.new-tag-tittle-info {
+    font-size: 30px;
+    font-weight: 600;
+}
+.new-tag-add-info {
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.new-tag-input {
+    width: 90%;
+    padding: 10px;
+    background-color: rgb(245, 245, 245);
+    border-radius: 10px;
+    border: none; 
+}
+.new-tag-add-color {
+    display: flex;
+    height: 60px;
+    padding: 10px;
+}
+.new-tag-name-color {
+    margin-top: 10px;
+    margin-left: 20px;
+    font-size: 15px;
+    font-weight: 550;
+}
+.new-tag-color-option {
+    margin-left: 20px;
+    height: 30px;
+    width: 30px;
+    border: 1px solid;
+}
+.new-tag-btn-bottom {
+    height: 70px;
+    display: flex;
+}
+.new-tag-btn-cacel {
+    margin-left: auto;
+    margin-right: 10px;
+}
+.form-btn-cancel {
+    height: 40px;
+    background-color: white;
+    color: black;
+    width: 90px;
+    border-radius: 20px;
+    font-size: 20px;
+    font-weight: 600;
+    margin-top: 15px;
+    border: 0px solid;
+}
+.new-tag-btn-cacel button {
+    cursor: pointer;
+}
+.new-tag-btn-cacel button:active {
+    background-color: black;
+    color: white;
+}
+.new-tag-btn-create {
+    margin-right: 30px;
+}
+.form-btn-create {
+    height: 40px;
+    background-color: black;
+    color: white;
+    width: 90px;
+    border-radius: 20px;
+    font-size: 20px;
+    font-weight: 600;
+    margin-top: 15px;
+}
+.new-tag-btn-create button {
+    cursor: pointer;
+}
+.new-tag-btn-create button:focus {
+    background-color: white;
+    color: black;
+}
