--- a/src/components/Calendar/CreatePlan.css
+++ b/src/components/Calendar/CreatePlan.css
@@ -309,3 +309,146 @@ input:checked + .slider:before {
 	color: white;
 	box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
 }
+.go-to-palace-container {
+	height: 500px;
+    width: 500px;
+    border: 1px solid;
+    background-color: white;
+    margin-left: 30px;
+    border-radius: 20px;
+    padding: 20px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border: none;
+}
+.go-to-palace-tittle {
+	height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.go-to-palace-tittle-info {
+	font-size: 30px;
+    font-weight: 600;
+}
+.go-to-palace-search-bar {
+	height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+	border: 1px solid;
+}
+.go-to-palace-search-all {
+	height: 30px;
+	width: 80%;
+	display: flex;
+    justify-content: center;
+    align-items: center;
+	border: none;
+	background-color: rgb(237, 237, 237);
+	border-radius: 10px;
+}
+.go-to-palace-search-input {
+	padding: 5px;
+	width: 90%;
+	background-color: rgb(237, 237, 237);
+	border: none;
+	
+}
+.go-to-palace-search-icon {
+	margin-top: 3px;
+}
+.go-to-palace-search-input:focus {
+	outline: none;
+}
+.go-to-palace-result {
+	display: flex;
+	height: 40px;
+	border: 1px solid;
+}
+.go-to-palace-result-icon {
+	margin-top: 10px;
+	margin-left: 55px;
+}
+.go-to-palace-result-info {
+	margin-left: 10px;
+	margin-top: 10px;
+	font-size: 14px;
+}
+.go-to-palace-result-name {
+	height: 250px;
+	border: 1px solid;
+	line-height: 20px;
+}
+.go-to-palace-result-name-img {
+	height: 40px;
+	width: 40px;
+	border: 1px solid;
+	border-radius: 100%;
+	margin-left: 40px;
+	margin-top: 10px;
+	
+}
+.go-to-palace-btn-bottom {
+	height: 70px;
+    display: flex;
+}
+ .go-to-palace-btn-cacel {
+    margin-left: auto;
+    margin-right: 10px;
+}
+.form-btn-cancel {
+    height: 40px;
+    background-color: white;
+    color: black;
+    width: 90px;
+    border-radius: 20px;
+    font-size: 20px;
+    font-weight: 600;
+    margin-top: 15px;
+    border: 0px solid;
+}
+.go-to-palace-btn-cacel button {
+    cursor: pointer;
+}
+.go-to-palace-btn-cacel button:active {
+    background-color: black;
+    color: white;
+}
+.go-to-palace-form-btn-create {
+    height: 40px;
+    background-color: black;
+    color: white;
+    width: 110px;
+    border-radius: 20px;
+    font-size: 20px;
+    font-weight: 600;
+    margin-top: 14px;
+}
+.go-to-palace-btn-create button {
+    cursor: pointer;
+}
+.go-to-palace-btn-create button:focus {
+    background-color: white;
+    color: black;
+}
+.go-to-palace-btn-add {
+    height:70px;
+}
+.form-btn-add {
+    height: 40px;
+    background-color: black;
+    color: white;
+    width: 90px;
+    border-radius: 20px;
+    font-size: 18px;
+    font-weight: 600;
+    margin-top: 15px;
+    margin-left: 30px;
+}
+.go-to-palace-btn-add button{
+    cursor: pointer;
+}
+.go-to-palace-btn-add button:hover {
+  background-color: white;
+  color: black;
+}
