--- a/src/components/Calendar/CreatePlan.css
+++ b/src/components/Calendar/CreatePlan.css
@@ -338,7 +338,6 @@ input:checked + .slider:before {
 .go-to-palace-container {
 	height: 500px;
     width: 500px;
-    border: 1px solid;
     background-color: white;
     margin-left: 30px;
     border-radius: 20px;
@@ -361,8 +360,7 @@ input:checked + .slider:before {
     display: flex;
     justify-content: center;
     align-items: center;
-	border: 1px solid;
-}
+}	
 .go-to-palace-search-all {
 	height: 30px;
 	width: 80%;
@@ -389,7 +387,6 @@ input:checked + .slider:before {
 .go-to-palace-result {
 	display: flex;
 	height: 40px;
-	border: 1px solid;
 }
 .go-to-palace-result-icon {
 	margin-top: 10px;
@@ -402,7 +399,6 @@ input:checked + .slider:before {
 }
 .go-to-palace-result-name {
 	height: 250px;
-	border: 1px solid;
 	line-height: 20px;
 }
 .go-to-palace-result-name-img {
@@ -417,18 +413,19 @@ input:checked + .slider:before {
 .go-to-palace-btn-bottom {
 	height: 70px;
     display: flex;
+	margin-top: 10px;
 }
  .go-to-palace-btn-cacel {
     margin-left: auto;
     margin-right: 10px;
 }
-.form-btn-cancel {
+.go-to-palace-form-btn-cancel {
     height: 40px;
     background-color: white;
     color: black;
     width: 90px;
     border-radius: 20px;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 600;
     margin-top: 15px;
     border: 0px solid;
@@ -446,7 +443,7 @@ input:checked + .slider:before {
     color: white;
     width: 110px;
     border-radius: 20px;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 600;
     margin-top: 14px;
 }
@@ -460,7 +457,7 @@ input:checked + .slider:before {
 .go-to-palace-btn-add {
     height:70px;
 }
-.form-btn-add {
+.go-to-palace-form-btn-add {
     height: 40px;
     background-color: black;
     color: white;
@@ -477,4 +474,98 @@ input:checked + .slider:before {
 .go-to-palace-btn-add button:hover {
   background-color: white;
   color: black;
+}
+.create-name-search-name-bar {
+	height: auto;
+	display: flex;
+	justify-content: center;	
+	align-items: center;
+	margin-top: 20px;
+}
+.create-name-search-name-input {
+	padding: 5px;
+	border-radius: 10px;
+	background-color: rgb(237, 237, 237);
+	border: none;
+	height: 40px;
+	font-size: 15px;
+	width: 80%;
+}
+.create-name-search-name-input:focus {
+	outline: none;
+}
+.create-name-search-phone-input {
+	padding: 5px;
+	border-radius: 10px;
+	background-color: rgb(237, 237, 237);
+	border: none;
+	width: 80%;
+	height: 40px;
+	font-size: 15px;
+}
+.create-name-search-phone-input:focus {
+	outline: none;
+}
+.create-name-search-note-input {
+	padding: 10px;
+	border-radius: 10px;
+	background-color: rgb(237, 237, 237);
+	border: none;
+	width: 80%;
+	height: 150px;
+	font-size: 15px;
+	resize: none;
+}
+.create-name-search-note-input:focus {
+	outline: none;
+}
+.create-name-container {
+	height: 500px;
+    width: 500px;
+    background-color: white;
+    margin-left: 30px;
+    border-radius: 20px;
+    padding: 20px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border: none;
+}
+.create-name-btn-bottom {
+	height: 70px;
+    display: flex;
+	margin-top: 40px;
+}
+.create-name-form-btn-cancel {
+    height: 40px;
+    background-color: white;
+    color: black;
+    width: 90px;
+    border-radius: 20px;
+    font-size: 18px;
+    font-weight: 600;
+    margin-top: 15px;
+    border: 0px solid;
+}
+.create-name-btn-cacel button {
+    cursor: pointer;
+}
+.create-name-btn-cacel button:active {
+    background-color: black;
+    color: white;
+}
+.create-name-form-btn-create {
+    height: 40px;
+    background-color: black;
+    color: white;
+    width: 90px;
+    border-radius: 20px;
+    font-size: 18px;
+    font-weight: 600;
+    margin-top: 14px;
+}
+.create-name-btn-create button {
+    cursor: pointer;
+}
+.create-name-btn-create button:focus {
+    background-color: white;
+    color: black;
 }
